tests/NormalTests/paczka1/fuzzy1/55827982.err
Error in line 3: bMzP A589 94,0
Error in line 6: 59lI S280 80,5
Error in line 5: HLwsgHUP A589 51,6
Error in line 18: R75Gn2 S280 87,5
